# BambuCam

./: .gitignore  LICENSE  README.md  current-transform-report.txt  pyproject.toml  requirements.txt  ruff-report.txt  shellcheck-report.txt  transform-report.txt
.github/workflows/: apply-fps-cap-removal.yml  ci.yml  cleanup-branches.yml  release.yml  temporary-apply-hardening.yml  temporary-apply-installer-release.yml  temporary-format-camera-startup.yml  temporary-format-hardening.yml  temporary-observability-cleanup.yml
bambucam/: __init__.py  _version.py  config.py  main.py  observability.py  system_control.py  system_info.py  timelapse.py  update_guard.py  updater.py
bambucam/camera/: __init__.py  detector.py  manager.py  models.py  profiles.py
bambucam/camera/backends/: __init__.py  base.py  picamera2_backend.py  v4l2_backend.py
bambucam/streaming/: __init__.py  mjpeg.py  rtsp.py  snapshot.py
bambucam/web/: __init__.py  api.py  app.py  features.py  operations.py  security.py  stream.py  ui.py
bambucam/web/static/css/: app.css  features.css
bambucam/web/static/js/: app.js  features.js  i18n.js
bambucam/web/templates/: index.html
config/: bambucam.yaml
docs/: bambubuddy-integration.md  configuration.md  installation.md
scripts/: apply_hardening_patch.py  apply_installer_release_patch.py  apply_observability_cleanup.py  install.sh
systemd/: bambucam-reboot.rules  bambucam.service
tests/: test_api_config.py  test_config.py  test_detector.py  test_main.py  test_manager.py  test_models.py  test_observability.py  test_operations.py  test_picamera2_backend.py  test_profiles.py  test_rtsp.py  test_snapshot.py  test_system_control.py  test_system_info.py  test_timelapse.py  test_updater.py  test_web_app.py  test_web_i18n.py  test_web_security.py
