[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bambucam"
dynamic = ["version"]
description = "Raspberry Pi camera streaming software for BambuBuddy and BambuStudio"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "BambuCam Contributors" }
]
keywords = ["raspberry-pi", "camera", "streaming", "rtsp", "bambulab", "bambubuddy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: System :: Hardware",
]
dependencies = [
    "flask>=3.0",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "requests>=2.31",
]

[project.optional-dependencies]
picamera2 = ["picamera2>=0.3"]
dev = ["pytest>=7.0", "pytest-cov", "black", "ruff", "mypy"]

[project.scripts]
bambucam = "bambucam.main:main"

[project.urls]
Homepage = "https://github.com/fgrfn/bambucam"
Repository = "https://github.com/fgrfn/bambucam"
Issues = "https://github.com/fgrfn/bambucam/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["bambucam*"]

[tool.setuptools.package-data]
bambucam = ["web/templates/*.html", "web/static/**/*"]

[tool.setuptools.dynamic]
version = { attr = "bambucam._version.__version__" }

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
